--- a/TURO-PRICE-SCRAPER.ipynb
+++ b/TURO-PRICE-SCRAPER.ipynb
@@ -183,7 +183,7 @@
     "\n",
     "\n",
     "#Saves df as csv in your current working directory.\n",
-    "ziplist_df.to_csv('listy.csv', index = False)"
+    "ziplist_df.to_csv('turo_results.csv', index = False)"
    ]
   },
   {
